<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#131313">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry,ScrollViewSize"
            android:paddingStart="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardCornerRadius="7dp">

            <ImageView
                android:id="@+id/moviePosterImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.051"
                android:contentDescription="@string/image_view_to_hold_the_movie_poster" />

            </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:orientation="vertical"
                    tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/movieTitleTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="left"
                    android:maxLines="5"
                    android:singleLine="false"
                    android:text="@string/movie_title"
                    android:textColor="#fafcfd"
                    android:textSize="30sp"
                    app:fontFamily="@font/bungee"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.323"
                    app:layout_constraintStart_toEndOf="@+id/moviePosterImageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.034" />

                    <TextView
                        android:id="@+id/movieRatingTitleTextView"
                        android:text="@string/average_user_rating"
                        android:textColor="#2a99f3"
                        android:paddingTop="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="fill_parent"
                        app:fontFamily="sans-serif-condensed"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/movieRatingValueTextView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#fafcfd"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        app:fontFamily="@font/audiowide" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/releaseDateTitleTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/released_on"
                android:gravity="left"
                android:textColor="#2a99f3"
                android:paddingTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/releaseDateValueTextView"
                android:textSize="30sp"
                android:textColor="#fafcfd"
                android:gravity="left"
                android:textStyle="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/movieOverviewTitleTextView"
                android:text="@string/synopsis"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingTop="10dp"
                android:textColor="#2a99f3"
                android:textStyle="bold"
                android:textSize="20sp"
                app:fontFamily="sans-serif-condensed"/>

            <TextView
                android:id="@+id/movieOverviewValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:padding="5dp"
                android:gravity="left"
                android:maxLines="50"
                android:singleLine="false"
                android:textColor="#fafcfd"
                android:textSize="20sp"
                app:fontFamily="sans-serif" />

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>